fixed content-inner spacing issue in Neuse on map page only

--- a/drupal/sites/all/themes/watershed/wn_neuse/css/neuse.css
+++ b/drupal/sites/all/themes/watershed/wn_neuse/css/neuse.css
@@ -11,6 +11,10 @@ body {
   margin-top: 40px;
 }
 
+.page-map #content-inner {
+  padding-top: 40px;
+}
+
 #sidebar-second .block .block-inner, .node-inner {
   overflow: hidden;
 }
